# ai-assistant

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
api/: main.py
api/middleware/: __init__.py  auth.py  rate_limit.py  tenant.py
api/routes/: __init__.py  briefing.py  chat.py  field_ticket_preflight.py  health.py  reconciliation.py
app/agents/: __init__.py  confirmation.py  main_agent.py  router.py  tool_registry.py
app/chains/: briefing.py  email_triage.py  fault_triage.py  field_ticket_preflight.py  reconciliation.py
app/memory/: extractor.py  manager.py  store.py
app/models/: __init__.py  desert_entities.py  requests.py  responses.py
app/rag/: ingestion.py  retrieval.py
app/tools/desert/: __init__.py  ai_reports.py  api_client_log.py  context.py  conversation.py  custom_forms.py  equipment.py  field_tickets.py  qbo.py  reconcile.py  resolve.py  shape.py
config/: settings.py
config/prompts/: briefing.txt  field_ticket_preflight.txt  fuel_surcharge.txt  main_system.txt  reconciliation.txt
docker/: Dockerfile  docker-compose.yml
scripts/: ecs_pin_latest.py  ingest_documents.py  seed_vector_store.py
tests/: conftest.py  test_shape.py
tests/test_api/: test_chat.py  test_health.py
