[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
config = ["prompts/*.txt"]

[project]
name = "desert-ai-assistant"
version = "0.1.0"
description = "LangChain / FastAPI service for Field Ticket Master (Desert)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-anthropic>=0.3.0,<1.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
vector = [
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.0",
]
# Pin when enabling: must match langchain 1.x line.
anthropic = ["langchain-anthropic>=1.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
